--- a/logistics_app.ipynb
+++ b/logistics_app.ipynb
@@ -2,26 +2,166 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "763e13e6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Package:\n",
-    "def __init__(self,package_id, sender, receiver, status=\"Pending\"):\n",
-    "    self.package_id = package_id\n",
-    "    self.sender = sender\n",
-    "    "
+    "    def __init__(self,package_id, sender, receiver, status=\"Pending\"):\n",
+    "        self.package_id = package_id\n",
+    "        self.sender = sender\n",
+    "        self.receiver = receiver\n",
+    "        self.status= status\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print(f\"ID: {self.package_id} - From: {self.sender} - To: {self.receiver} - Status: {self.status}\")\n",
+    "        \n",
+    "    def update_status(self,new_status):\n",
+    "        self.status = new_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "79ce3c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LogisticsApp:\n",
+    "    def __init__(self):\n",
+    "        # Initializing the logistics app \n",
+    "        self.packages = []\n",
+    "        \n",
+    "    # Adding a new package\n",
+    "    def add_package(self):\n",
+    "        pid = input(\"Enter Package ID: \")\n",
+    "        sender = input(\"Enter Sender Name: \")\n",
+    "        receiver = input(\"Enter Receiver Name: \")\n",
+    "        pkg = Package(pid, sender, receiver)\n",
+    "        self.packages.append(pkg)\n",
+    "        print(\"Package added.\\n\")\n",
+    "    \n",
+    "    def view_packages(self):\n",
+    "        if not self.packages:\n",
+    "            print(\"No packages.\\n\")\n",
+    "            return\n",
+    "        for pkg in self.packages:\n",
+    "            pkg.display()\n",
+    "        print()\n",
+    "    \n",
+    "# Updating package status\n",
+    "    def update_package(self):\n",
+    "        pid = input(\"Enter Package ID to update: \")\n",
+    "        for pkg in self.packages:\n",
+    "            if pkg.package_id == pid:\n",
+    "                new_status = input(\"Enter new status: \")\n",
+    "                pkg.update_status(new_status)\n",
+    "                print(\"Status updated.\\n\")\n",
+    "                return\n",
+    "        print(\"Package not found.\\n\")\n",
+    "    \n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            print(\"Logistics App Menu\")\n",
+    "            print(\"1. Add Package\")\n",
+    "            print(\"2. View Packages\")\n",
+    "            print(\"3. Update Package Status\")\n",
+    "            print(\"4. Exit\")\n",
+    "            \n",
+    "            choice = input(\"Choose an option: \")\n",
+    "            \n",
+    "            if choice == '1':\n",
+    "                self.add_package()\n",
+    "            elif choice == '2':\n",
+    "                self.view_packages()\n",
+    "            elif choice == '3':\n",
+    "                self.update_package()\n",
+    "            elif choice == '4':\n",
+    "                print(\"Exiting...\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Invalid Choice.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c964fbd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "Package added.\n",
+      "\n",
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "ID: 123 - From: Christopher Bonnin - To: John Doe - Status: Pending\n",
+      "\n",
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "Status updated.\n",
+      "\n",
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "ID: 123 - From: Christopher Bonnin - To: John Doe - Status: Received\n",
+      "\n",
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "ID: 123 - From: Christopher Bonnin - To: John Doe - Status: Received\n",
+      "\n",
+      "Logistics App Menu\n",
+      "1. Add Package\n",
+      "2. View Packages\n",
+      "3. Update Package Status\n",
+      "4. Exit\n",
+      "Exiting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__==\"__main__\":\n",
+    "    app = LogisticsApp()\n",
+    "    app.run()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
